--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="../styles/login.css">
+    <link rel="stylesheet" href="styles/login.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         </div>
         <div class="contentBx">
             <div class="formBx">
-                <img src="../assets/image/logo.svg">
+                <img src="assets/image/logo.svg">
 
                 <div class="form-header">
                     <div class="title">Login</div>
@@ -24,19 +24,19 @@
 
                 <form class="form-body">
                     <div class="inputBox">
-                        <img src="../assets/image/username.svg">
+                        <img src="assets/image/username.svg">
                         <div class="inputInnerBox">
                             <label class="input-label">UserName</label>
                             <input class="input" placeholder="olivia_012">
                         </div>
                     </div>
                     <div class="inputBox">
-                        <img src="../assets/image/password.svg">
+                        <img src="assets/image/password.svg">
                         <div class="inputInnerBox">
                             <label class="input-label">Password</label>
                             <input class="input" placeholder="olivia_012">
                         </div>
-                        <img src="../assets/image/eye.svg">
+                        <img src="assets/image/eye.svg">
                     </div>
 
                     <div class="rememberBox">
@@ -47,9 +47,9 @@
                         <div>Forgot Password ?</div>
                     </div>
 
-                    <a class="login-button" target="_blank" href="../pages/multi station department.html">
+                    <a class="login-button" target="_blank" href="pages/multi station department.html">
                         <div>Login</div>
-                        <img src="../assets/image/login.svg">
+                        <img src="assets/image/login.svg">
                     </a>
 
                 </form>
