header and login page changes

--- a/pages/multi station department.html
+++ b/pages/multi station department.html
@@ -10,7 +10,10 @@
 
 <body>
     <div class="header">
-        <img src="../assets/image/logo.svg" class="logo">
+        <a href="../index.html">
+            <img src="../assets/image/logo.svg" class="logo" >
+        </a>
+        
         <div class="heading1 semibold header-title">Fire Department</div>
         <div class="logout">
             <img src="../assets/image/logo-small.svg" class="logout-logo">
