--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         </div>
         <div class="contentBx">
             <div class="formBx">
-                <img src="assets/image/logo.svg">
-
+                <img src="assets/image/logo.svg" class="logo">
                 <div class="form-header">
                     <div class="title">Login</div>
                     <div class="subtitle">Login to manage your account</div>
@@ -24,14 +23,14 @@
 
                 <form class="form-body">
                     <div class="inputBox">
-                        <img src="assets/image/username.svg">
+                        <img src="assets/image/username.svg" class="icon-input">
                         <div class="inputInnerBox">
                             <label class="input-label">UserName</label>
                             <input class="input" placeholder="olivia_012">
                         </div>
                     </div>
                     <div class="inputBox">
-                        <img src="assets/image/password.svg">
+                        <img src="assets/image/password.svg" class="icon-input">
                         <div class="inputInnerBox">
                             <label class="input-label">Password</label>
                             <input class="input" placeholder="olivia_012">
@@ -42,12 +41,12 @@
                     <div class="rememberBox">
                         <div class="rememberme">
                             <input type="checkbox">
-                            <div>Remember me</div>
+                            <div class="paragraph1">Remember me</div>
                         </div>
-                        <div>Forgot Password ?</div>
+                        <div class="paragraph1">Forgot Password ?</div>
                     </div>
 
-                    <a class="login-button" target="_blank" href="pages/multi station department.html">
+                    <a class="login-button" href="pages/multi station department.html">
                         <div>Login</div>
                         <img src="assets/image/login.svg">
                     </a>
