changes on station and logo change

--- a/pages/multi station department.html
+++ b/pages/multi station department.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <a href="../index.html">
-            <img src="../assets/image/logo.svg" class="logo" >
+            <img src="../assets/image/logo.png" class="logo" >
         </a>
         
         <div class="heading1 semibold header-title">Fire Department</div>
@@ -45,33 +45,47 @@
             <div class="section2">
                 <div class="section2-innerSection">
                     <div class="section-group">
-                        <label class="heading1 bold">Station 1</label>
+                        <label class="heading1 bold">Station</label>
                         <div class="section-group-body">
                             <div class="section-group-body-line">
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">CH-1</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">CH-2</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">C-33</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">C-44</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">C-5</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">T-6</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">B-7</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">HM-8</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">E-9</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">R-10</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">E-11</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">C-14</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">HM-31</span></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
                             </div>
                             <div class="section-group-body-line">
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
+                                
                             </div>
                         </div>
                     </div>
 
-                    <div class="section-group">
+                    <!-- <div class="section-group">
                         <label class="heading1 bold">Station 2</label>
                         <div class="section-group-body">
                             <div class="section-group-body-line">
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
                             </div>
                             <div class="section-group-body-line">
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
                             </div>
                         </div>
                     </div>
@@ -80,14 +94,16 @@
                         <label class="heading1 bold">Station 3</label>
                         <div class="section-group-body">
                             <div class="section-group-body-line">
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
                             </div>
                             <div class="section-group-body-line">
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
                             </div>
                         </div>
                     </div>
@@ -96,14 +112,16 @@
                         <label class="heading1 bold">Station 4</label>
                         <div class="section-group-body">
                             <div class="section-group-body-line">
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
                             </div>
                             <div class="section-group-body-line">
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
                             </div>
                         </div>
                     </div>
@@ -112,17 +130,19 @@
                         <label class="heading1 bold">Station 5</label>
                         <div class="section-group-body">
                             <div class="section-group-body-line">
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
-                                <button class="primary-btn-small custom-ellipsis">“A,1, Etc...”</button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
+                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
                             </div>
                             <div class="section-group-body-line">
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
-                                <button class="secondary-btn-small custom-ellipsis">Custom</button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="secondary-btn-small custom-ellipsis"></button>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="section3">
@@ -139,10 +159,10 @@
                 </div>
                 <div class="action">
                     <div class="action-image-wapper">
-                        <img src="../assets/image/stopTurnoutTimer.svg" class="action-img">
+                        <img src="../assets/image/alert.svg" class="action-img">
                     </div>
                     <div class="action-image-wapper">
-                        <img src="../assets/image/alert.svg" class="action-img">
+                        <img src="../assets/image/stopTurnoutTimer.svg" class="action-img">
                     </div>
                     <div class="action-image-wapper">
                         <img src="../assets/image/reset.svg" class="action-img">
@@ -151,6 +171,7 @@
             </div>
         </div>
     </main>
+    <div class="bottom-text heading1">Contact: support@easealert.com | Phone: (xxx) xxx-xxx </div>
 </body>
 
 </html>
