--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="contentBx">
             <div class="formBx">
-                <img src="assets/image/logo.svg" class="logo">
+                <img src="assets/image/logo.png" class="logo">
                 <div class="form-header">
                     <div class="title">Login</div>
                     <div class="subtitle">Login to manage your account</div>
