--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
 
                     <a class="login-button" href="pages/multi station department.html">
-                        <div>Login</div>
+                        <div class="login-text">Login</div>
                         <img src="assets/image/login.svg">
                     </a>
 
