--- a/pages/multi station department.html
+++ b/pages/multi station department.html
@@ -48,23 +48,24 @@
                         <label class="heading1 bold">Station</label>
                         <div class="section-group-body">
                             <div class="section-group-body-line">
-                                <button class="primary-btn-small"><span class="custom-ellipsis">CH-1</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">CH-2</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">C-33</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">C-44</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">C-5</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">T-6</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">B-7</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">HM-8</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">E-9</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">R-10</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">E-11</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">C-14</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">HM-31</span></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
+                                <button class="primary-btn-small">CH-1 saddasdas sdad</button>
+                                <button class="primary-btn-small">CH-2</button>
+                                <button class="primary-btn-small">C-33</button>
+                                <button class="primary-btn-small">C-44</button>
+                                <button class="primary-btn-small">C-5</button>
+                                <button class="primary-btn-small">T-6</button>
+                                <button class="primary-btn-small">B-7</button>
+                                <button class="primary-btn-small">HM-8</button>
+                                <button class="primary-btn-small">E-9</button>
+                                <button class="primary-btn-small">R-10</button>
+                                <button class="primary-btn-small">E-11</button>
+                                <button class="primary-btn-small">C-14</button>
+                                <button class="primary-btn-small">HM-31</button>
+                                <button class="primary-btn-small">HM-31 AH-50 AH-80</button>
+                                <button class="secondary-btn-small"></button>
+                                <button class="secondary-btn-small"></button>
+                                <button class="secondary-btn-small"></button>
+                                <button class="secondary-btn-small"></button>
                             </div>
                             <div class="section-group-body-line">
                                 
