--- a/pages/multi station department.html
+++ b/pages/multi station department.html
@@ -48,7 +48,7 @@
                         <label class="heading1 bold">Station</label>
                         <div class="section-group-body">
                             <div class="section-group-body-line">
-                                <button class="primary-btn-small">CH-1 saddasdas sdad</button>
+                                <button class="primary-btn-small">CH-1</button>
                                 <button class="primary-btn-small">CH-2</button>
                                 <button class="primary-btn-small">C-33</button>
                                 <button class="primary-btn-small">C-44</button>
@@ -61,7 +61,6 @@
                                 <button class="primary-btn-small">E-11</button>
                                 <button class="primary-btn-small">C-14</button>
                                 <button class="primary-btn-small">HM-31</button>
-                                <button class="primary-btn-small">HM-31 AH-50 AH-80</button>
                                 <button class="secondary-btn-small"></button>
                                 <button class="secondary-btn-small"></button>
                                 <button class="secondary-btn-small"></button>
