--- a/pages/multi station department.html
+++ b/pages/multi station department.html
@@ -71,78 +71,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- <div class="section-group">
-                        <label class="heading1 bold">Station 2</label>
-                        <div class="section-group-body">
-                            <div class="section-group-body-line">
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                            </div>
-                            <div class="section-group-body-line">
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="section-group">
-                        <label class="heading1 bold">Station 3</label>
-                        <div class="section-group-body">
-                            <div class="section-group-body-line">
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                            </div>
-                            <div class="section-group-body-line">
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="section-group">
-                        <label class="heading1 bold">Station 4</label>
-                        <div class="section-group-body">
-                            <div class="section-group-body-line">
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                            </div>
-                            <div class="section-group-body-line">
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="section-group">
-                        <label class="heading1 bold">Station 5</label>
-                        <div class="section-group-body">
-                            <div class="section-group-body-line">
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                                <button class="primary-btn-small"><span class="custom-ellipsis">“A,1, Etdsd. dsddsd 795123”</span></button>
-                            </div>
-                            <div class="section-group-body-line">
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                                <button class="secondary-btn-small custom-ellipsis"></button>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
             </div>
             <div class="section3">
@@ -159,7 +87,10 @@
                 </div>
                 <div class="action">
                     <div class="action-image-wapper">
-                        <img src="../assets/image/alert.svg" class="action-img">
+                        <a href="../pages/widgets.html">
+                            <img src="../assets/image/alert.svg" class="action-img">
+                        </a>
+                        
                     </div>
                     <div class="action-image-wapper">
                         <img src="../assets/image/stopTurnoutTimer.svg" class="action-img">
