--- a/pages/widgets.html
+++ b/pages/widgets.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="header">
-        <a href="../index.html">
+        <a href="../pages/final.html">
             <img src="../assets/image/logo.png" class="logo" >
         </a>
         
