--- a/pages/final.html
+++ b/pages/final.html
@@ -25,14 +25,14 @@
             <div class="inner-container">
                 <div class="section1">
                     <div style="width: 33%;"></div>
-                    <div style="width: 33%;" class="button1">
+                    <div class="button1">
                         <div class="button-text">
-                            <img src="../assets/image/button-clock.svg" alt="">
+                            <img src="../assets/image/button-clock.svg" alt="" class="btn-clock">
                             <div class="text">05:00:00</div>
                         </div>
                     </div>
                     <div style="width: 33%;" class="right-content">
-                        <img src="../assets/image/clock-icon.svg" alt="">
+                        <img src="../assets/image/clock-icon.svg" alt="" class="text-clock">
                         <div>
                             <div class="heading1">15 Aug, 2023</div>
                             <div class="heading1">05:00 PM</div>
@@ -66,7 +66,7 @@
                     <div class="emergency-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
                 </div>
             </div>
-            <div class="bottom-text heading1">Contact: support.com | Phone: (xxx) xxx-xxx </div>
+            <div class="bottom-text heading1">Contact: support@easealert.com | Phone: (xxx) xxx-xxx </div>
         </div>
     </main>
     
