--- a/pages/final.html
+++ b/pages/final.html
@@ -51,7 +51,7 @@
 
                 <div class="section2">
                     <div class="section-heading">Crew(s) Responding</div>
-                    <div class="button-section">
+                    <div class="button-group">
                         <button class="primary-btn">A1</button>
                     </div>
                 </div>
