--- a/pages/widgets.html
+++ b/pages/widgets.html
@@ -115,7 +115,7 @@
         </div>
     </main>
     <div class="bottom-text heading1">
-        <span>Contact: support@easealert.easealert.com | Phone: (xxx) xxx-xxx</span>
+        <span>Contact: support@easealert.com | Phone: (xxx) xxx-xxx</span>
     </div>
     <script src="../script/clock.js"></script>
     <script src="../script/calender.js"></script>
