change on widgets screen

--- a/pages/final.html
+++ b/pages/final.html
@@ -16,8 +16,8 @@
         
         <div class="heading1 semibold header-title">Fire Department</div>
         <div class="logout">
-            <img src="../assets/image/logo-small.svg" class="logout-logo">
-            <div class="paragraph1 bold">Logout</div>
+            <!-- <img src="../assets/image/logo-small.svg" class="logout-logo">
+            <div class="paragraph1 bold">Logout</div> -->
         </div>
     </div>
     <main class="main">
