--- a/pages/multi station department.html
+++ b/pages/multi station department.html
@@ -96,7 +96,9 @@
                         <img src="../assets/image/stopTurnoutTimer.svg" class="action-img">
                     </div>
                     <div class="action-image-wapper">
-                        <img src="../assets/image/reset.svg" class="action-img">
+                        <a href="../pages/final.html">
+                            <img src="../assets/image/reset.svg" class="action-img">
+                        </a>
                     </div>
                 </div>
             </div>
