--- a/pages/final.html
+++ b/pages/final.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>multi station department</title>
+    <title>final event</title>
     <link rel="stylesheet" href="../styles/final.css">
 </head>
 
 <body>
     <div class="header">
         <a href="../index.html">
-            <img src="../assets/image/logo.png" class="logo" >
+            <img src="../assets/image/logo.png" class="logo">
         </a>
-        
+
         <div class="heading1 semibold header-title">Fire Department</div>
         <div class="logout">
             <!-- <img src="../assets/image/logo-small.svg" class="logout-logo">
@@ -57,19 +57,27 @@
                 </div>
 
                 <div class="section3">
-                    <div class="section-heading">Location</div>
-                    <div class="location">
-                        <img src="../assets/image/location-icon.svg" alt="">
-                        <div class="address">2972 Westheimer Rd. Santa Ana, Illinois 85486</div>
+                    <div class="section3-card-location">
+                        <div class="section-heading">Location</div>
+                        <div class="location">
+                            <img src="../assets/image/location-icon.svg" alt="">
+                            <div class="address">2972 Westheimer Rd. Santa Ana, Illinois 85486</div>
+                        </div>
                     </div>
-                    <div class="section-heading">Emergency Notes</div>
-                    <div class="emergency-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
+                    <div class="section3-card-emergency">
+                        <div class="section-heading">Emergency Notes</div>
+                        <div class="emergency-text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                            an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="bottom-text heading1">Contact: support@easealert.com | Phone: (xxx) xxx-xxx </div>
         </div>
     </main>
-    
+
 </body>
 
 </html>
