--- a/pages/final.html
+++ b/pages/final.html
@@ -46,6 +46,7 @@
                         <button class="primary-btn">Fire</button>
                         <button class="primary-btn">Fire</button>
                         <button class="primary-btn">EMS</button>
+                        <button class="primary-btn">EMS</button>
                     </div>
                 </div>
 
